[gd_scene load_steps=4 format=3 uid="uid://dplid51g2of8q"]

[ext_resource type="PackedScene" uid="uid://b7fwujm7u54tj" path="res://scenes/ui/save_manager/save_sync_status_bar/save_sync_now_button/save_sync_now_button.tscn" id="1_fi5vk"]
[ext_resource type="Script" uid="uid://d1en577d2klhu" path="res://scenes/ui/save_manager/save_sync_status_bar/save_sync_status_bar.gd" id="1_pb2xa"]
[ext_resource type="PackedScene" uid="uid://ba15sb1ppai7g" path="res://scenes/ui/save_manager/save_sync_status_bar/save_sync_status_indicator/save_sync_status_indicator.tscn" id="2_48dve"]

[node name="SaveSyncStatusBar" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_pb2xa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SaveSyncStatusIndicator" parent="HBoxContainer" instance=ExtResource("2_48dve")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSyncNowButton" parent="HBoxContainer" instance=ExtResource("1_fi5vk")]
unique_name_in_owner = true
layout_mode = 2
